--- a/package.json
+++ b/package.json
@@ -14,22 +14,31 @@
     "translate": "transmart"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^4.29.0",
     "@loadable/component": "^5.15.3",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^4.29.3",
     "@transmart/cli": "^0.2.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "i18next": "^23.5.1",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-resources-to-backend": "^1.1.4",
     "lucide-react": "^0.277.0",
     "react": "^18.2.0",
+    "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-i18next": "^13.2.2",
     "react-router-dom": "^6.10.0",
+    "stream-chat": "^8.14.4",
+    "stream-chat-react": "^11.1.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
   },
