--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^4.13.2",
     "@sanity/client": "^6.9.3",
     "@sanity/image-url": "^1.0.2",
     "cors": "^2.8.5",
