--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
   "editor.quickSuggestions": {
     "strings": true
   },
-  "i18n-ally.localesPaths": ["src/i18n", "src/i18n/locales"]
+  "i18n-ally.localesPaths": ["src/i18n", "src/i18n/locales"],
+  "todo-tree.tree.showBadges": true
 }
