--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
+    "embla-carousel-react": "^8.0.0-rc17",
     "framer-motion": "^10.16.16",
     "i18next": "^23.5.1",
     "i18next-browser-languagedetector": "^7.1.0",
