--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^13.2.2",
     "react-router-dom": "^6.10.0",
+    "react-spinners": "^0.13.8",
     "stream-chat": "^8.14.4",
     "stream-chat-react": "^11.1.1",
     "tailwind-merge": "^1.14.0",
